app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* .custom-scrollbar::-webkit-scrollbar {
  height: 5px !important;
  width: 8px;
}
.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: rgba(150, 150, 150, 0.772);
  border-radius: 50px;
} */

.borderBlack {
  @apply border border-black/30;
}

::-moz-selection {
  /* Code for Firefox */
  background: transparent;
}

::selection {
  background: transparent;
}

/* input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
textarea:-webkit-autofill,
textarea:-webkit-autofill:hover,
textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  -webkit-text-fill-color: white;
  -webkit-box-shadow: 0 0 0px 1000px rgb(0 0 0 /0) inset;
  transition: background-color 5000s ease-in-out 0s;
} */

